# v2ray_auto_ip_allocator

./: LICENSE  README.md  pyproject.toml
scripts/: build_lambda  lambda_function.py
tests/: test_example.py
v2ray_auto_ip_allocator/: main.py  tasks.py  utils.py
